# fishboat-database

./: .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
db/: Dockerfile
db/migrations/: 20240110192712_init.sql
nginx/: default.conf.template
setup/: Dockerfile  generate.sh
wizard/: pyproject.toml  wizard.py
